--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,163 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+:root{
+    --mainColor: #cccccc;
+    --secondaryColor: white;
+    --buttonColor: #cccccc
+    /* --borderColor: 
+    --iconColor:
+    
+     */
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+    font-family: 'Roboto';
+    margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* -------------------App.js-------------------------------- */
+/* --------------------------------------------------------- */
+
+.main-wrapper {
+    background-color: var(--mainColor);
+    padding: 50px 0 0 50px;
+    height: 650px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.secondary-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 70%;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--secondaryColor);
+    box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
+    padding-bottom: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+    padding: 40px 0 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* -------------------End of App.js---------------------------- */
+/* ------------------------------------------------------------- */
+
+/* -------------------TodoList.js--------------------------- */
+.todo-list {
+    width: 500px;
+}
+.todo-list ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+
+/* ----------------------TodoInput.js/--------------------------- */
+
+.form-parent {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 30px 0;
+    padding-top: 30px;
+    
+}
+
+.search-bar {
+    width: 98%;
+    height: 18px;
+    margin-bottom: 10px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid var(--mainColor);
+    text-align: center; 
+}
+
+.searchBtn {
+    width: 100%;
+    height: 22px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: var(--buttonColor);
+    color: black;
+    transition: all 0.5s;
+}
+
+.searchBtn:hover{
+    background-color: #339933;
+    color: white;
+}
+
+/* ----------------TodoItem.js------------------ */
+/* ---------------------------------------------- */
+.item-group {
+    width: 500px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    /* border-bottom: 1px solid var(--mainColor); */
+    padding: 5px 0 0     0;
+    position: relative;
+}
+
+.item-group p {
+    padding-bottom: 5px;
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+    padding-top: 2px;
+    transition: all 0.5s linear;
+    border-bottom: 0.5px solid var(--mainColor);
+}
+
+.item-group:hover p{
+    background-color: var(--mainColor);
+    transform: scale(1.1);
+}
+
+
+.item-btns {
+    visibility: hidden;
+    opacity: 0;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    border-top: 1px solid var(--mainColor);
+    padding: 5px 0 0 0;
+    position: absolute;
+}
+
+.item-btns button {
+    border: none;
+    outline-color: white;
+    background-color: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    transition: all 0.5s ease;
+    top: 10px;
+    width: 400px;
+    
+}
+
+.item-btns button:hover{
+    transform: scale(1.2);
+}
+
+.item-group:hover .item-btns{
+    transition: all 0.5s ease ;
+    visibility: visible;
+    padding-bottom: 15px;
+    position: relative;
+    opacity: 1;
+}
+
+/* Item conditional rendering */
+.completed{
+    font-style: italic;
+    text-decoration: line-through;
+    color: #a6a6a6;
 }
