--- a/src/App.css
+++ b/src/App.css
@@ -161,3 +161,8 @@
     text-decoration: line-through;
     color: #a6a6a6;
 }
+
+.important{
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,92,104,1) 0%, rgba(255,255,255,1) 60%);
+}
